[gd_scene load_steps=2 format=2]

[ext_resource path="res://Mixer.gd" type="Script" id=1]

[node name="Mixer" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.3804
margin_top = 24.5937
margin_right = 1.3804
margin_bottom = 24.5937
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -88.0
margin_right = 126.0
margin_bottom = 88.0
rect_min_size = Vector2( 252, 110 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 245.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 238.0
margin_bottom = 14.0
text = "mixer"
align = 1
uppercase = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 238.0
margin_bottom = 22.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 238.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
margin_top = 2.0
margin_right = 238.0
margin_bottom = 16.0
text = "Volume"
align = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
margin_top = 20.0
margin_right = 238.0
margin_bottom = 40.0

[node name="Volume" type="HSlider" parent="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_right = 210.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
min_value = 1.0
max_value = 128.0
value = 100.0
ticks_on_borders = false

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_left = 214.0
margin_top = 3.0
margin_right = 238.0
margin_bottom = 17.0
text = "100"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
margin_top = 44.0
margin_right = 238.0
margin_bottom = 58.0
text = "Pan:"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
margin_top = 62.0
margin_right = 238.0
margin_bottom = 82.0

[node name="Pan" type="HSlider" parent="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_right = 218.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
min_value = 1.0
max_value = 128.0
value = 64.0
ticks_on_borders = false

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 222.0
margin_top = 3.0
margin_right = 238.0
margin_bottom = 17.0
text = "64"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
margin_top = 70.0
margin_right = 238.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 238.0
margin_bottom = 118.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 238.0
margin_bottom = 162.0

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 117.0
margin_bottom = 40.0
rect_min_size = Vector2( 54, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OK"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 121.0
margin_right = 238.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer4/Volume" to="." method="_on_Volume_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer3/Pan" to="." method="_on_Pan_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
